--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -60,7 +60,21 @@ jobs:
           from_branch: test
           target_branch: main
           github_token: ${{ secrets.GITHUB_TOKEN }}
-  
+   
+  release:
+    runs-on: ubuntu-latest
+    needs: [version]
+    if: success()
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: Version ${{ needs.version.outputs.new_version }}
+          tag_name: v${{ needs.version.outputs.new_version }}
+
   publish:
     runs-on: ubuntu-latest
     needs: [version]
